[project]
name = "memgraph-ai-toolkit"
version = "0.1.0"
description = "Memgraph ai-toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "core",
    "mcp[cli]>=1.6.0",
    "neo4j>=5.28.1",
]

[tool.uv.sources]
core = { workspace = true}

[tool.uv.workspace] 
members = [
    "core/",
    "integrations/langchain-memgraph/",
    "integrations/mcp-memgraph/",
]
