[project]
name = "memgraph-ai"
version = "0.1.2"
description = "Memgraph AI Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "memgraph-toolbox",
    "mcp[cli]>=1.6.0",
    "neo4j>=5.28.1",
]

[tool.uv.sources]
memgraph-toolbox = { workspace = true }

[tool.uv.workspace] 
members = [
    "memgraph-toolbox/",
    "integrations/langchain-memgraph/",
    "integrations/mcp-memgraph/",
]
