[project]
name = "core"
version = "0.1.0"
description = "Core library for Memgraph AI tools and utilities"
readme = "README.md"
authors = [
  { name = "antejavor", email = "ante.javor@memgraph.io" }
]
license = { text = "MIT" }
requires-python = ">=3.10"


classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"