[project]
name = "mcp-memgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "neo4j>=5.28.1",
    "core",

]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "anthropic", 
    "mcp[cli]>=1.3.0",
    "pytest-asyncio >= 0.20.3"
]


[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

